deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  namespace: ingress-nginx
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: mycontainer-2
        image: latest
        ports:
        - containerPort: 8000
