service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
