ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressfile
  namespace: ingress-nginx 
spec:
  ingressClassName: nginx
  rules:
  - host: ankita-sharma.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myservice
              port:
                number: 80
